# p2p-microkernel

./: CMakeLists.txt  README.md  ServiceHandle.cpp  ServiceHandle.h  ServicesRegistry.cpp  ServicesRegistry.h  SharedMemory.cpp  SharedMemory.h  hasher.cpp  ipc_common.h  orchestrator.cpp
GossipNode/: GossipNode.cpp  nim_gossip_node.h
GossipNode/nim/: gossip_node.nim
KeyGuard/: key_guard.cpp
Network_Listener/: CMakeLists.txt  NetworkListener.cpp  NetworkListener.h  main.cpp  nim_listener.cpp  nim_listener.h
Network_Listener/nim/: nim_listener.nim  nim_listener.nimble
Orchestrator/: CMakeLists.txt  Orchestrator.cpp  Orchestrator.h  ServiceConnection.h  main.cpp
Validator/: CMakeLists.txt  main.cpp  validator.cpp  validator.h
cmake/: CapnProto.cmake
proto/: orchestrator.capnp
